# compi_proyecto

./: CMakeLists.txt  README.md
core/: AFD.cpp  AFD.h  CMakeLists.txt  Conjunto.h  Estado.h  Scanner.cpp  main.cpp
core/analizador_lexico/: AFN.cpp  AFN.h  AFNManager.cpp  AFNManager.h  Estado.cpp  Scanner.h
core/calculadora/: Calculadora.cpp  Calculadora.h
core/gramatica_gramaticas/: Gramaticas.cpp  Gramaticas.h
core/ll1/: ConjuntosLL1.cpp  ConjuntosLL1.h  Gramatica.cpp  Gramatica.h  Lexer.cpp  Lexer.h  ParserLL1.cpp  ParserLL1.h  TablaLL1.cpp  TablaLL1.h
core/lr0/: AnalizadorLR0.cpp  AnalizadorLR0.h  ElemTablaLR0.cpp  ElemTablaLR0.h  GramaticaLR0.h  Inf_IrA.cpp  Inf_IrA.h  ItemLR0.cpp  ItemLR0.h  RenglonLR0.cpp  RenglonLR0.h  Simb.cpp  Simb.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
gui/dialogs/: AsignarTokenDialog.h  CrearAFNDialog.cpp  CrearAFNDialog.h
gui/modules/analizador_lexico/: AnalizadorLexicoWidget.cpp  AnalizadorLexicoWidget.h
gui/modules/analizador_lexico/dialogs/: AsignarTokenDialog.cpp
gui/modules/analizador_lexico/widgets/: AFDTableWidget.cpp  AFDTableWidget.h
gui/modules/calculadora/: CalculadoraWidget.cpp  CalculadoraWidget.h
gui/modules/gramatica_gramaticas/: GramaticasWidget.cpp  GramaticasWidget.h
gui/modules/ll1/: LL1Widget.cpp  LL1Widget.h
gui/modules/lr0/: LR0Widget.cpp  LR0Widget.h
gui/widgets/: AFNTableWidget.cpp  AFNTableWidget.h
